[package]
name = "lambda-edge-deployer"
version = "0.1.0"
authors = ["Akira Ueda <ue@gol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
failure = "0.1.6"
rusoto_core = "0.42.0"
rusoto_lambda = "0.42.0"
git2 = "0.11.0"
serde = "1.0.104"
serde_derive = "1.0.104"
toml = "0.5.5"
colored = "1.9.1"
zip = "0.5.4"
tempfile = "3.1.0"
chrono = "0.4.10"
regex = "1.3.2"
